--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" :dir="locale === 'ar' ? 'rtl' : 'ltr'">
+
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" href="/favicon.ico" />  -->
